<resources>
    <string name="app_name">Github User Finder</string>
    <string name="follower">Follower</string>
    <string name="following">Following</string>
    <string name="repository">Repository</string>
    <string name="loading">loading</string>
    <string name="avatar_photo">avatar photo</string>
    <string name="company_icon">company icon</string>
    <string name="location_icon">location icon</string>
    <string name="query_hint">Type username here</string>
    <string name="user_detail">User Detail</string>
    <string name="no_description">No description</string>
    <string name="no_follower_yet">No Follower Yet</string>
    <string name="not_following_yet">Not Following Yet</string>
    <string name="avatar_of_the_user">Avatar of the user</string>
    <string name="no_repository_yet">No Repository Yet</string>
    <string name="favorite">Favorite</string>
    <string name="setting">Setting</string>
    <string name="favorite_user">Favorite User</string>
    <string name="you_have_no_favorite_user">You have no favorite user</string>
    <string name="username_not_found">Username not found</string>
    <string name="language">English</string>
    <string name="language_title">Language</string>
    <string name="reminder_text">Reminder at 9:00 AM</string>
    <string name="delete_button">Delete button</string>
    <string name="favorite_banner">Favorite User</string>
    <string name="no_favorite_user">No Favorite User</string>
    <string name="favorite_user_photo">Favorite User Photo</string>
    <string name="already_in_favorite">Already in favorite list!</string>
    <string name="added_to_favorite">added to favorite list.</string>
    <string name="reminder_activated">Reminder at 09:00 AM activated</string>
    <string name="reminder_canceled">Reminder at 09:00 AM canceled</string>
    <string name="search_first">Let\'s search the user first!</string>

</resources>